--- a/resources/views/components/layouts/app.edge
+++ b/resources/views/components/layouts/app.edge
@@ -6,6 +6,7 @@
   <title> Home / x </title>
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
+  @vite(['resources/css/login.css', 'resources/js/app.js'])
 </head>
 <body>
   <main id="root">
