--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -5,37 +5,37 @@
 }
 body {
   font-size: 14px;
+  margin: 0px;
+  width: 100%;
+}
+.nav_bar{
+  display: flex;
+  justify-content: center;
 }
 .logo_image {
   width: 7%;
   height: 25px;
   background-size: cover;
-  opacity: 1;
   position: relative;
   top: 0px;
   left: 0px;
-  overflow: hidden;
 }
 
 .login_section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 1200px;
-  background: rgba(91,112,131,0.4000000059604645);
-  opacity: 1;
-  position: relative;
-  top: 0px;
-  left: 0px;
-  overflow: hidden;
+  background: rgba(119, 130, 140, 0.4);
 }
 .fisrt_div {
+  display: inline-block;
   width: 600px;
   height: 650px;
   background: rgba(0,0,0,1);
-  opacity: 1;
   position: absolute;
-  top: 0px;
-  left: 0px;
-  overflow: hidden;
+  border-radius: 16px;
 }
 .third_div {
   width: 600px;
@@ -43,11 +43,9 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  opacity: 1;
   position: absolute;
   top: 53px;
   left: 0px;
-  overflow: hidden;
 }
 .forth_div {
   width: 364px;
@@ -67,11 +65,8 @@ body {
   position: absolute;
   top: 19px;
   left: 32px;
-  font-family: Roboto;
   font-weight: Bold;
   font-size: 31px;
-  opacity: 1;
-  text-align: left;
 }
 .btn_google_apple {
   display: flex;
@@ -80,13 +75,12 @@ body {
   align-items: center;
   width: 300px;
   height: 40px;
+  color: black;
   background: rgba(255,255,255,1);
-  opacity: 1;
   position: absolute;
   top: 88px;
   left: 140px;
   border-radius: 20px;
-  overflow: hidden;
   font-size: 20px;
 }
 .btn_padding{
@@ -104,6 +98,39 @@ body {
 }
 .hr{
   width: 8.2rem;
-  border: rgba(51,54,57,1) 1px solid;
+  border-color: rgba(51, 54, 57, 1);
   top: 13.4rem;
+  margin-block-start: 0.7em;
+  margin-block-end: 0.7em;
+
+}
+.input_email {
+  background-color: black;
+  width: 290px;
+  height: 58px;
+  position: absolute;
+  top: 236px;
+  left: 9rem;
+  border-radius: 4px;
+  overflow: hidden;
+  color: gray;
+  font-size: 20px;
+  padding: 12px;
+}
+.next{
+  top: 320px;
+}
+.password{
+  top: 380px;
+  font-size: 16px;
+  font-weight: 500;
+  background-color: black;
+  color: white;
+  border: 1px solid rgba(51, 54, 57, 1);
+}
+.sign_up {
+  position: absolute;
+  top: 29.4rem;
+  left: 9rem;
+  font-size: 15px;
 }
