--- a/resources/views/pages/login.edge
+++ b/resources/views/pages/login.edge
@@ -1,7 +1,7 @@
 @layouts.app('title', 'login')
 
-
-<Section class="login_section">
+<div class="timeline">
+    <Section class="login_section">
     <div class="fisrt_div">
         <div class="nav_bar">
              <img class="logo_image" src='images/image_twitter.png' alt='image twitter'>
@@ -44,4 +44,5 @@
         </div>
     </div> 
 </Section>  
+</div>
 @end
