--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -12,6 +12,14 @@
       @endcomponent
    @end
 
+  @if (auth.user)
 
+  logged in as {{ auth.user.email }}
+
+  @else 
+
+  <a href="/register">Register</a>
+
+  @endif
  </div>
 @end
