--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -214,7 +214,7 @@ body{
   justify-content: center;
   gap: 20px;
 }
-.container {
+.containersidebar {
   display: flex;
   justify-content: center;
   max-width: 1200px;
