--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -1,26 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
-
-*{
-  box-sizing: border-box;
+ body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
 }
-body {
-  font-size: 14px;
-  margin: 0px;
-  width: 100%;
-}
-.nav_bar{
-  display: flex;
-  justify-content: center;
-}
-.logo_image {
-  width: 7%;
-  height: 25px;
-  background-size: cover;
-  position: relative;
-  top: 0px;
-  left: 0px;
-}
-
 .login_section {
   display: flex;
   justify-content: center;
@@ -29,112 +12,99 @@ body {
   height: 1200px;
   background: rgba(119, 130, 140, 0.4);
 }
-.fisrt_div {
-  display: inline-block;
-  width: 600px;
-  height: 700px;
-  background: rgba(0,0,0,1);
+.container {
+  justify-content: center;
+  background-color: #000000;
+  border-radius: 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-right: 150px;
+  padding-left: 150px;
+  height: 100%;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+  width: 450px;
+  height: 600px;
   position: absolute;
   border-radius: 16px;
+
 }
-.third_div {
-  width: 600px;
-  height: 650px;
-  position: absolute;
-  top: 53px;
+
+.logo_image {
+  width: 7%;
+  height: 25px;
+  background-size: cover;
+  position: relative;
+  top: 0px;
   left: 0px;
 }
-.forth_div {
-  width: 364px;
-  height: 538px;
-  position: absolute;
-  left: 118px;
+.nav_bar{
+  display: flex;
+  justify-content: center;
 }
-.title {
-  width: 170px;
-  color: rgba(231,233,234,1);
-  position: absolute;
-  top: 19px;
-  left: 140px;
-  font-weight: Bold;
+h1 {
   font-size: 31px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  margin-bottom: 12px;
+  padding: 12px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  font-size: 15px;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+button {
+  color: white;
+  border: none;
+  border-radius: 9999px;
+  padding: 12px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+button:hover {
+  background-color: #1991db;
+}
+
 .btn_google_apple {
   display: flex;
   gap: 10px;
   justify-content: center;
   align-items: center;
-  width: 300px;
-  height: 40px;
   color: black;
   background: rgba(255,255,255,1);
-  position: absolute;
-  top: 88px;
-  left: 140px;
   border-radius: 20px;
-  font-size: 20px;
-}
-.btn_padding{
-  top: 152px;
-  font-weight: bold;
-}
-.or {
-  display: flex;
-  gap: 5px;
-  color: rgba(231,233,234,1);
-  position: absolute;
-  top: 13rem;
-  font-size: 1rem;
-  left: 9rem;
-}
-.hr{
-  width: 8.2rem;
-  border-color: rgba(51, 54, 57, 1);
-  top: 13.4rem;
-  margin-block-start: 0.7em;
-  margin-block-end: 0.7em;
-
-}
-.input_email_password {
-  background-color: black;
-  width: 290px;
-  height: 58px;
-  position: absolute;
-  top: 236px;
-  left: 9rem;
-  border-radius: 4px;
-  overflow: hidden;
-  color: gray;
-  font-size: 20px;
-  padding: 12px;
-}
-.password_padding{
-  top: 300px;
-}
-#btn_login{
-  display: flex;
-  left: 9rem;
-  top: 350px
-}
-.next{
-  top: 440px;
 }
 .password{
-  top: 500px;
-  font-size: 16px;
-  font-weight: 500;
   background-color: black;
   color: white;
   border: 1px solid rgba(51, 54, 57, 1); 
 }
-.sign_up {
-  position: absolute;
-  top: 36rem;
-  left: 9rem;
-  font-size: 15px;
-}
-a{
-  text-decoration: none;
-}
- 
 
+.or {
+  display: flex;
+  gap: 5px;
+  color: rgba(231,233,234,1);
+  top: 13rem;
+  font-size: 1rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.hr{
+  width:13rem;
+  border-color: rgba(51, 54, 57, 1);
+  margin-block-start: 0.7em;
+  margin-block-end: 0.7em;
+
+}  
