--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -10,7 +10,7 @@
   align-items: center;
   width: 100%;
   height: 1200px;
-  background: rgba(119, 130, 140, 0.4);
+  background: rgb(128, 128, 128);
 }
 .container {
   justify-content: center;
