--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -224,6 +224,9 @@ body{
 .sidebar {
   width: 200px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .main-content {
@@ -271,6 +274,14 @@ body{
   width: 100%;
   cursor: pointer;
   margin-top: 15px;
+}
+.scroller_buffer{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50vh;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 1024px) {
