--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,6 @@
 *{
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 
 body{
@@ -282,6 +281,22 @@ body{
   width: 100%;
   height: 50vh;
   pointer-events: none;
+}
+.btn_follow{
+  width: 60px;
+  height: 20px;
+  background-color: #fff;
+  color: black;
+  text-align: center;
+  border-radius: 2px;
+}
+.btn_follow_and_logout{
+  display: flex;
+  gap: 10px;
+}
+.btn_decoration{
+  text-decoration: none;
+
 }
 
 @media screen and (max-width: 1024px) {
