--- a/resources/views/pages/createcompte.edge
+++ b/resources/views/pages/createcompte.edge
@@ -35,26 +35,27 @@
 
                 <input id="firstname" type="text" name="firstname" value="{{ old('firstname') || ''}}" placeholder="Firstname" >
                 @inputError('firstname')
-                    <p> {{ $messages.join(', ')}} </p>
+                    <p class="error_message"> {{ $messages.join(', ')}} </p>
                 @end
+                
                 <input id="secondname" type="text" name="secondname" value="{{ old('secondname') || ''}}" placeholder="Secondname" >
                 @inputError('secondname')
-                    <p> {{ $messages.join(', ')}} </p>
+                    <p class="error_message"> {{ $messages.join(', ')}} </p>
                 @end
 
                 <input id="telephone" type="text" name="telephone" value="{{ old('telephone') || ''}}" placeholder="Telephone">
                 @inputError('telephone')
-                    <p> {{ $messages.join(', ')}} </p>
+                    <p class="error_message"> {{ $messages.join(', ')}} </p>
                 @end
 
                 <input id="email" type="email" name="email" value="{{ old('email') || ''}}" placeholder="Email" >
                 @inputError('email')
-                    <p> {{ $messages.join(', ')}} </p>
+                    <p class="error_message"> {{ $messages.join(', ')}} </p>
                 @end
 
                 <input id="birthday" type="date" name="birthday" value="{{ old('birthday') || ''}}" placeholder="Birthday" >
                 @inputError('birthday')
-                    <p> {{ $messages.join(', ')}} </p>
+                    <p class="error_message"> {{ $messages.join(', ')}} </p>
                 @end
 
                 <input id="profilimage" type="file" name="profilimage" value="{{ old('profilimage') || ''}}" placeholder="Profilimage">
@@ -62,9 +63,10 @@
                     <option value="masculin">Masculin</option>
                     <option value="feminin">Feminin</option>
                 </select> 
+
                 <input id="password" type="password" name="password" value="{{ old('password') || ''}}" placeholder="Password" >
                 @inputError('password')
-                    {{ $messages.join(', ')}} 
+                    <p class="error_message">{{ $messages.join(', ')}} </p> 
                 @end
                 
                 <button type="submit">Create</button>
