--- a/resources/views/pages/users.edge
+++ b/resources/views/pages/users.edge
@@ -1,21 +1,22 @@
-<h1>Users</h1>
 
-  {{--  @if(session('success'))
-    <p style="color: green;">{{ session('success') }}</p>
-  @endif
+  @flashMessage('notification')
+  <div style="color: green;" class="notification {{ $message.type }}">
+    {{ $message.message }}
+  </div>
+  @end
 
-  @if(session('error'))
+  {{--  @if(session('error'))
     <p style="color: red;">{{ session('error') }}</p>
-  @endif  --}}
-
-  <ul>
-    @each(user in users)
-      <li>
-        {{ user.firstname }}{{ user.secondname }}
-        <form action="/users" method="POST" style="display:inline;">
-          {{ csrfField() }} 
-          <button type="submit">Follow</button>
-        </form>
-      </li>
-    @endeach
-  </ul>
+  @endif   --}}
+    <h1>followers</h1>
+    <ul>
+      @each(user in users)
+        <li>
+          {{ user.firstname }} {{ user.secondname }}
+          <form action="/users" method="POST" style="display:inline;">
+            {{ csrfField() }} 
+            <button type="submit">Follow</button>
+          </form>
+        </li>
+      @endeach
+    </ul>
