add tweet fonctionality

--- a/resources/views/components/tweetEditor.edge
+++ b/resources/views/components/tweetEditor.edge
@@ -4,7 +4,7 @@
        <img src="images/profile-photo.png" alt="avatar"/>
     </article>
 
-    <form class="tweet-editor-form" method="POST" action="home">
+    <form class="tweet-editor-form" method="POST" action="home/api">
         <div>
             <textarea class="tweet-editor-input" draggable="false" name="tweet" id='tweet' placeholder="What's happening?"></textarea>
         </div>
